newclay/test/Compiler/Propagation/Fail/MakeExternalCodePointerNoABIArgument/main.clay
import __primitives__.*;

foo(x:Int) { }

main() {
    return makeExternalCodePointer(foo, Int);
}
